Add support for custom API paths and request body templates, fix text issues

--- a/指标计算方法.md
+++ b/指标计算方法.md
@@ -1,6 +1,6 @@
-# 性能测试报告指标计算方法
+# 7DGroup SSE 流式输出性能测试工具指标计算方法
 
-本文档详细说明 SSE 性能测试报告中所有指标趋势图的计算方法。
+本文档详细说明 7DGroup SSE 流式输出性能测试工具中所有指标趋势图的计算方法。
 
 ## 一、时间基准说明
 
